[Tickets: 19254] Fix Firefox long wiki articles jumping around on the screen if the article scrolls.
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@2526 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Css/editor.css
+++ b/WebApp/Resources/Css/editor.css
@@ -195,4 +195,4 @@ li.ts-menutree-item  div { border:1px solid transparent; }
 .loading-indicator label {padding-left: 20px;	background: url('../images/ajax-loader-small.gif') no-repeat center left; }
 
 /*Wiki Editor*/
-.wiki-desc-editor{ height:430px !important; overflow-y:auto !important; }
+.wiki-desc-editor{ min-height:430px !important; overflow-y:auto !important; }
