--- a/WebApp/Resources/Pages/Wiki.css
+++ b/WebApp/Resources/Pages/Wiki.css
@@ -60,5 +60,4 @@
 .fa-dropbox { color: #3d9ae8 !important}
 .fa-circle  { color: #D9534F !important}
 
-#Wiki-Edit-Body_ifr{height:500px !important;}
 
